@@ -10,7 +10,7 @@
             <div class="input-group d-inline-block mb-1 pl-2" style="flex-wrap: nowrap">
                 <mat-checkbox [color]="'primary'" class="mr-1 align-center" style="line-height: 1;" [(ngModel)]="isEntityNew">
                 </mat-checkbox>
-                Mark as New
+                Mark as new
             </div>
             <div class="input-group d-inline-block mb-4 pl-2" style="flex-wrap: nowrap">
                 <mat-checkbox [color]="'primary'" class="mr-1 align-center" style="line-height: 1;" [(ngModel)]="isPublished">
