@@ -33,10 +33,10 @@
                 <div class="dropdown-menu mt-0 pb-0 pt-0">
                     <button class="dropdown-item" (click)="publishItems()">Publish</button>
                     <button class="dropdown-item" (click)="unpublishItems()">Unpublish</button>
-                    <button *ngIf="param != 'new'" class="dropdown-item" (click)="markAsNew()">Mark as New</button>
-                    <button class="dropdown-item" (click)="unmarkNew()">Unmark from New</button>
-                    <button *ngIf="param != 'discount'" class="dropdown-item" (click)="markAsOffer()">Mark as Offer</button>
-                    <button class="dropdown-item" (click)="unmarkOffer()">Unmark from offer</button>
+                    <button *ngIf="param != 'new'" class="dropdown-item" (click)="markAsNew()">Mark as new</button>
+                    <button class="dropdown-item" (click)="unmarkNew()">Unmark from new</button>
+                    <button *ngIf="param != 'discount'" class="dropdown-item" (click)="markAsOffer()">Mark as discount</button>
+                    <button class="dropdown-item" (click)="unmarkOffer()">Unmark from discount</button>
                     <button *ngIf="shop.type == 'restaurant'" class="dropdown-item" (click)="markAsTodaySpecial()">Mark as Today Special</button>
                     <button *ngIf="shop.type == 'restaurant'" class="dropdown-item" (click)="unmarkTodaySpecial()">Unmark from Today Special</button>
                     <button class="dropdown-item" (click)="openAddToModal()">Add to</button>
