@@ -183,7 +183,7 @@
                                 <div class="input-group" style="flex-wrap: nowrap">
                                     <mat-checkbox [color]="'primary'" class="mr-1" formControlName="isEntityNew">
                                     </mat-checkbox>
-                                    Mark as New
+                                    Mark as new
                                 </div>
                                 <div class="input-group" style="flex-wrap: nowrap">
                                     <mat-checkbox [color]="'primary'" class="mr-1" formControlName="isPublished">
@@ -193,7 +193,7 @@
                                 <div class="input-group" style="flex-wrap: nowrap">
                                     <mat-checkbox [color]="'primary'" class="mr-1" formControlName="isOffer">
                                     </mat-checkbox>
-                                    Mark as offer
+                                    Mark as discount
                                 </div>
                                 <!-- <div class="input-group" style="flex-wrap: nowrap">
                                     <mat-checkbox [color]="'primary'" class="mr-1" formControlName="isPriceDisplayed">
