@@ -56,6 +56,7 @@ export class AboutComponent implements OnInit {
   isShopClosable: boolean;
   element: string;
   loading: WsLoading = new WsLoading;
+  isPublishLoading: WsLoading = new WsLoading;
   isUnpublishLoading: WsLoading = new WsLoading;
   refreshLoading: WsLoading = new WsLoading;
   address: Address = new Address;
@@ -93,6 +94,7 @@ export class AboutComponent implements OnInit {
   previewImage;
   croppieObj;
   isConfirmUnpublishedModalOpened: boolean;
+  isConfirmPublishedModalOpened: boolean;
   isConfirmCloseShopModalOpened: boolean;
   isConfirmReactivateModalOpened: boolean;
   isConfirmQuitShopModalOpened: boolean;
@@ -456,6 +458,18 @@ export class AboutComponent implements OnInit {
       }, err => {
         WsToastService.toastSubject.next({ content: err.error, type: 'danger' });
       })
+  }
+  publishPage() {
+    this.isPublishLoading.start();
+    this.authShopAdminService.publishPage()
+    .pipe(takeUntil(this.ngUnsubscribe), finalize(() => this.isPublishLoading.stop())).subscribe(result => {
+      this.shop.isPublished = true;
+      this.sharedShopService.shop.next(this.shop);
+      this.isConfirmPublishedModalOpened = false;
+      WsToastService.toastSubject.next({content: result['message'], type: 'success'});
+    }, err => {
+      WsToastService.toastSubject.next({ content: err.error, type: 'danger' });
+    });
   }
   unpublishPage() {
     this.isUnpublishLoading.start();
